[project]
name = "comfyui-spectrum-ksampler"
description = "Spectrum: training-free diffusion sampling acceleration via Chebyshev polynomial feature forecasting. Drop-in KSampler replacement that skips transformer blocks on predicted steps for ~2-3x speedup."
version = "2.2.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/ComfyUI-Spectrum-KSampler"


[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "SpectrumKSampler"
Icon = ""
